# auth0-user-gatekeeper

./: .ort.yml  .releaserc.json  CONTRIBUTING.md  NOTICE  README.md  codecov.yml  test.http
.circleci/: config.yml
.github/workflows/: ort.yml
node-lib/: .gitignore  README.md  package.json  tsconfig.json  tsup.config.ts  vitest.config.js
node-lib/src/: index.ts
node-lib/test/: index.test.ts
node.test/: index.js
server/: Cargo.toml  Dockerfile  config.schema.json  config.yaml
server/src/: app.rs  cli.rs  configuration.rs  main.rs
