[package]
name = "auth0-user-gatekeeper"
version = "1.1.1"
edition = "2024"

[dependencies]
axum = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
validator = { version = "0.16", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0.145"
clap = { version = "4.5.47", features = ["derive"] }

[dev-dependencies]
tempfile = "3.22.0"
tower = "0.5.2"
http = "1.3.1"
